--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>top.silentstorm</groupId>
-  <artifactId>uplodqiniu</artifactId>
+  <artifactId>uploadqiniu</artifactId>
   <packaging>maven-plugin</packaging>
   <version>1.0</version>
-  <name>uplodqiniu Maven Mojo</name>
+  <name>uploadqiniu Maven Mojo</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -54,9 +54,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
         <version>3.6.0</version>
-        <configuration>
-
-        </configuration>
       </plugin>
     </plugins>
   </build>
